[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml_core"
version = "0.1.0"
description = "ML Training Microservice for Strategy Analysis Platform"
authors = [
    { name = "NeoNix", email = "neonix@lab.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "quant_shared",
    "tensorflow",
    "pandas",
    "numpy"
]

[tool.hatch.build.targets.wheel]
packages = ["src/training_node"]
